[package]
name = "cryptography-cffi"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
aws-lc = ["openssl-sys/aws-lc"]

[dependencies]
pyo3 = { version = "0.22.5", features = ["abi3"] }
openssl-sys = { version = "0.9.104", features = ["aws-lc"] }

[build-dependencies]
cc = "1.1.31"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(python_implementation, values("CPython", "PyPy"))'] }
